--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.2.4
   flutter:
     sdk: flutter
+  flutter_contacts: ^1.1.6
   flutter_riverpod: ^2.3.6
   image_picker: ^1.0.0
 
