--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   country_picker: ^2.0.20
   cupertino_icons: ^1.0.2
+  emoji_picker_flutter: ^1.6.1
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_storage: ^11.2.4
