--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   country_picker: ^2.0.20
   cupertino_icons: ^1.0.2
   emoji_picker_flutter: ^1.6.1
+  enough_giphy_flutter: ^0.4.0
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_storage: ^11.2.4
