--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^4.1.0
   cached_network_image: ^3.2.3
   cached_video_player: ^2.0.4
   cloud_firestore: ^4.8.2
@@ -42,8 +43,11 @@ dependencies:
     sdk: flutter
   flutter_contacts: ^1.1.6
   flutter_riverpod: ^2.3.6
+  flutter_sound: ^9.2.13
   image_picker: ^1.0.0
   intl: ^0.18.1
+  path_provider: ^2.0.15
+  permission_handler: ^10.4.2
   uuid: ^3.0.7
 
 dev_dependencies:
