--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.18.1
   path_provider: ^2.0.15
   permission_handler: ^10.4.2
+  story_view: ^0.14.0
   swipe_to: ^1.0.2
   uuid: ^3.0.7
 
